// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`2-level deep nested element match snapshot 1`] = `
<body>
  <main>
    <header>
      <h1>
        hello
      </h1>
      <h2>
        world
      </h2>
    </header>
  </main>
</body>
`;

exports[`Array of intergers match snapshot 1`] = `
<body>
  <h1>
    <span>
      1
    </span>
    2
    <span>
      3
    </span>
  </h1>
</body>
`;

exports[`Basic single element match snapshot 1`] = `
<body>
  <h1>
    hello
  </h1>
</body>
`;

exports[`Resolves text nodes match snapshot 1`] = `
<body>
  <h1>
    hello 
    <span>
      my
    </span>
    <h2>
      world
    </h2>
    friend
  </h1>
</body>
`;
